--- a/src/app/pages/page-home/partial-styles/_services.scss
+++ b/src/app/pages/page-home/partial-styles/_services.scss
@@ -3,19 +3,19 @@
 .services {
   
   &__columns {
-    @include grid-columns(3, clamp(2.5em, 5vw, 4em), 25em, 20em, 15em);
+    padding: 2rem;
+    @include grid-columns(3, clamp(2.5em, 5vw, 4em), 4em, 25em, 20em, 15em);
   }
 
   &__item {
     position: relative;
-    border: .1em dashed var(--white);
-    
-    border-radius: 1em;
-    padding: 1.5em 1em 1em 1em;
+    padding: 2em;
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-direction: column;
+
+    @include dashed-border-bg(1rem, .2em, $dash-array: 15);
 
     h3 {
       margin-bottom: 1.3em;
