--- a/src/scss/partials/_config.scss
+++ b/src/scss/partials/_config.scss
@@ -54,7 +54,7 @@ $var-states: (
         icn-sm: 1.2em,
         icn-md: 1.6em,
         icn-lg: 2.5em,
-        icn-xl: 4em
+        icn-xl: 3.6em
     ),
 
     television: (),
@@ -69,7 +69,7 @@ $var-states: (
         icn-sm: 1.1em,
         icn-md: 1.5em,
         icn-lg: 2.3em,
-        icn-xl: 3.9em
+        icn-xl: 3.5em
     ),
     mobile: (
         fs-h1: 1.5rem,
@@ -80,7 +80,7 @@ $var-states: (
         icn-sm: 1em,
         icn-md: 1.4em,
         icn-lg: 2.2em,
-        icn-xl: 3.8em
+        icn-xl: 3.4em
     )
 );
 
