--- a/src/scss/partials/_sections.scss
+++ b/src/scss/partials/_sections.scss
@@ -12,7 +12,7 @@
         }
 
         // 100% height, + 10em for skewed transition
-        height: calc(100 * var(--vh) + 10em);
+        height: calc(var(--vh-initial, 1vh) * 100 + 10em);
     }
 
     &:not(:last-of-type) {
